--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,3 @@
-<div class="twin">
-  <div style="tcontent">
-  </div>
-  <div id="content">
-    <hr class="prompt-break">
-    <span class="prompt1">ryan</span><span class="prompt2">@</span><span class="prompt3">themainframe</span><span class="prompt4"></span> <span>cat <%= @post.url %></span>
-    <div class="cat">
+<div class="ewin">
       <%= @post.body.html_safe %>
-    </div>
-  </div>
 </div>
