--- a/app/views/posts/blog_index.html.erb
+++ b/app/views/posts/blog_index.html.erb
@@ -1,2 +1,12 @@
-<h1>Posts#blog_index</h1>
-<p>Find me in app/views/posts/blog_index.html.erb</p>
+<div class="ewin">
+  <ul>
+    <li><a href="/">..</a></li>
+    <% @posts.each do |post| %>
+      <li>
+        <a href="/posts/<%= post.url %>">
+          <%= post.title %>
+        </a>
+      </li>
+    <% end %>
+  </ul>
+</div>
