Let rails handle errors, more front page items

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,6 +74,7 @@
       </a>
 
       <%= image_tag '/res/stickies/chrmevil.webp', alt: 'Chrome is evil!' %>
+      <p><i>This website is dedicated to mankind.</i></p>
     </footer>
   </body>
 </html>
