--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,21 @@
 <div class="ewin">
+  <pre>
+ ____                    _     
+|  _ \ _   _  __ _ _ __ ( )___ 
+| |_) | | | |/ _` | '_ \|// __|
+|  _ <| |_| | (_| | | | | \__ \
+|_| \_\\__, |\__,_|_| |_| |___/
+       |___/                   
+ _   _                                             
+| | | | ___  _ __ ___   ___ _ __   __ _  __ _  ___ 
+| |_| |/ _ \| '_ ` _ \ / _ \ '_ \ / _` |/ _` |/ _ \
+|  _  | (_) | | | | | |  __/ |_) | (_| | (_| |  __/
+|_| |_|\___/|_| |_| |_|\___| .__/ \__,_|\__, |\___|
+                           |_|          |___/      
+  </pre>
+  <p>This website is a celebration of old computer technology.</p>
+</div>
+<div class="ewin">
   <h3>Navigation</h3>
   <ul>
     <li><a href="/posts">Posts</a></li>
