--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,7 @@
         </li>
       </ul>
     </nav>
+    <%= render ApplicationController::random_comment %>
     <main>
       <%= yield %>
     </main>
