--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,28 +19,48 @@
     <nav>
       <ul>
         <li>
-          <a href="/"><%= image_tag '/res/user-home.webp', alt: 'Homepage' %></a>
-          <h4>Home</h4>
+          <a href="/">
+            <%= image_tag '/res/user-home.webp', alt: 'Homepage' %>
+            <h4>Home</h4>
+          </a>
         </li>
 
         <li>
-          <a href="/posts/"><%= image_tag '/res/folder-documents.webp', alt: 'Blog' %></a>
-          <h4>Blog</h4>
+          <a href="/posts/">
+            <h4>📝Blog</h4>
+          </a>
         </li>
 
         <li>
-          <a href="/files/"><%= image_tag '/res/ktorrent.webp', alt: 'Files' %></a>
-          <h4>Files</h4>
+          <a href="/files/">
+            <%= image_tag '/res/ktorrent.webp', alt: 'Files' %>
+            <h4>Files</h4>
+          </a>
         </li>
         
         <li>
-          <a href="https://git.ryanmj.xyz"><%= image_tag '/res/folder-git.webp', alt: 'git' %></a>
-          <h4>Git Server</h4>
+          <a href="https://git.ryanmj.xyz">
+            <%= image_tag '/res/folder-git.webp', alt: 'git' %>
+            <h4>Git</h4>
+          </a>
         </li>
 
         <li>
-          <a href="mailto:ryan@ryanmj.xyz"><%= image_tag '/res/kopete.webp', alt: 'Email Me' %></a>
-          <h4>Contact Me</h4>
+          <a href="mailto:ryan@ryanmj.xyz">
+            <h4>📧Email</h4>
+          </a>
+        </li>
+
+        <li>
+          <a href="/blerbs">
+            <h4>👽Blerbs</h4>
+          </a>
+        </li>
+
+        <li>
+          <a href="/links">
+            <h4>🔗Links</h4>
+          </a>
         </li>
       </ul>
     </nav>
