--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,3 @@
 <div class="ewin">
-      <%= @post.body.html_safe %>
+      <%= File.read(Rails.root.join('app', 'orgs', @post.where, @post.body)).html_safe %>
 </div>
