--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,6 +47,11 @@ h1 {
   text-shadow: 0 0 1px var(--header-color);
 }
 
+/* Do not display figure number */
+.figure-number {
+    display: none;
+}
+
 h2 {
   margin: 0 auto;
   padding: 0;
