--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,46 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>Ryan's Homepage</title>
+    <link rel="stylesheet" type="text/css" href="/main.css"/>
   </head>
   <body>
 
-    {{{body}}}
+    <div id="left">
+      <div>
+        <h5>Yup</h5>
+      </div>
+
+      <div>
+        <h5>Gaming</h5>
+      </div>
+
+      <div>
+        <h5>Links</h5>
+      </div>
+    </div>
+
+    <main>
+      {{{body}}}
+    </main>
+
+    <div id="right">
+      <div>
+        <h5>Yup</h5>
+      </div>
+
+      <div>
+        <h5>Gaming</h5>
+      </div>
+
+      <div>
+        <h5>Links</h5>
+      </div>
+    </div>
 
   </body>
 </html>
